--- a/index.html
+++ b/index.html
@@ -4,61 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green House Menu</title>    
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <main>
     <div class="accordion">
-      <div class="icon"><img src="img/sunny-day.png" alt=""></div>
+      <div class="icon"><i class="uil uil-sun img-svg"></i></div>
       <div class="title">
         <h2>сніданки </h2>
         <h3>breakfast</h3>
       </div>
     </div>
       <div class="panel">
-        <ul>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-        </ul>  
+        <div class="row">
+          <ul>
+            <li class="list"><p class="food_name">Каша вівсяна з молоком*</p><p class="heft">350г</p><p class="price">35</p></li>
+            <p class="desc">Oafmeal parridge with milk*</p>
+            <li class="list"><p class="food_name">Омлет з сиром і помідорами</p><p class="heft">150г</p><p class="price">47</p></li>
+            <p class="desc">Omelette with cheese and tomatoes</p>
+            <li class="list"><p class="food_name">Яєчня з беконом, помідорами чері та тостами</p><p class="heft">170/25г</p><p class="price">49</p></li>
+            <p class="desc">Oafmeal parridge with milk*</p>
+            <li class="list"><p class="food_name">Каша вівсяна з молоком*</p><p class="heft">350g</p><p class="price">35</p></li>
+            <p class="desc">Oafmeal parridge with milk*</p>
+          </ul>
+        </div>
       </div>
-
+      
       <div class="accordion">
-        <div class="icon"></div>
+        <div class="icon"><i class="uil uil-plus img-svg"></i></div>
         <div class="title">
           <h2>Додаткові інградіенти </h2>
           <h3>Additive Ingredients</h3>
         </div>
       </div>
         <div class="panel">
-          <ul>
-            <li>Lorem</li>
-            <li>Lorem</li>
-            <li>Lorem</li>
-            <li>Lorem</li>
-            <li>Lorem</li>
-            <li>Lorem</li>
-            <li>Lorem</li>
-          </ul>  
+          <div class="row">
+            <ul>
+              <li class="list"><p class="food_name">Co-Pay:</p><p class="price">$150.00</p></li>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </ul>
+          </div>
         </div>
 
-    <button class="accordion">Section 3</button>
-      <div class="panel">
-        <ul>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-          <li>Lorem</li>
-        </ul>
-      </div>
+        <div class="accordion bottom">
+          <div class="icon"><i class="uil uil-pizza-slice img-svg"></i></div>
+          <div class="title">
+            <h2>Сендвічі паніні</h2>
+            <h3>Panini</h3>
+          </div>
+        </div>
+          <div class="panel">
+            sdfsdfdsf
+          </div>
   </main>     
 
 <script>
