--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             <li class="sublist"><p class="subtitle">Omelette with cheese and tomatoes</p></li>
             <li class="list"><p class="food_name">Яєчня з беконом, помідорами чері та тостами</p><p class="heft">170/25</p><p class="price">49</p></li>
             <li class="sublist"><p class="subtitle">Fried eggs with becon, tomatoes and toasts</p></li>
-            <li class="list"><p class="food_name">Сирниуи з варенням та сметаною</p><p class="heft">150/30/30</p><p class="price">42</p></li>
-            <li class="sublist"><p class="subtitle"></p></li>
-            <li class="list"><p class="food_name"></p><p class="heft"></p><p class="price"></p></li>
+            <li class="list"><p class="food_name">Сирники з варенням та сметаною</p><p class="heft">150/30/30</p><p class="price">42</p></li>
             <li class="sublist"><p class="subtitle"></p></li>
           </ul>
         </div>
