--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             sdfsdfdsf
           </div>
   </main>     
-
+  <footer>
+    <h3>Отредактированно 20.09.2021</h3>
+  </footer>
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
