--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-    <div class="accordion bottom">
+    <div class="accordion">
       <div class="icon"></div>
       <div class="title">
         <h2>Назва категорії</h2>
@@ -68,7 +68,7 @@
       </div>  
     </div>  
           
-    <div class="accordion bottom">
+    <div class="accordion">
       <div class="icon"></div>
       <div class="title">
         <h2>Назва категорії</h2>
@@ -84,7 +84,7 @@
       </div>  
     </div>
 
-    <div class="accordion bottom">
+    <div class="accordion">
       <div class="icon"></div>
       <div class="title">
         <h2>Назва категорії</h2>
