--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="accordion">
       <div class="icon"><img src="icon/sun.png" alt="Sun" class="icon_32"></div>
       <div class="title">
-        <h2>сніданки</i></h2>
+        <h2>Сніданки</h2>
         <h3>breakfast</h3>
       </div>
     </div>
@@ -38,7 +38,7 @@
       </div>
       
     <div class="accordion">
-      <div class="icon"><img src="icon/plus.png" alt="Plus" class="icon_22"></i></div>
+      <div class="icon"><img src="icon/plus.png" alt="Plus" class="icon_22"></div>
       <div class="title">
         <h2>Додаткові інградіенти </h2>
         <h3>Additive Ingredients</h3>
