--- a/index.html
+++ b/index.html
@@ -125,8 +125,12 @@
       <div class="panel">
         <div class="row">
           <ul>
-            <li class="list"><p class="food_name">Назва їжі</p><p class="heft">Вага</p><p class="price">Ціна</p></li>
-            <li class="description"><p>Name of food</p><p>Lorem ipsum dolor sit.</p></li>
+            <li class="list"><p class="food_name">Паста Карбонара</p><p class="heft">250</p><p class="price">95</p></li>
+            <li class="description"><p>Pasta Carbonara</p><p>Паста лінгвіне, бекон, жовток, сир пармезан, вершки / Linguine, bacon, egg-yolk, parmesan, cream.</p></li>
+            <li class="list"><p class="food_name">Паста Чотири сири</p><p class="heft">250</p><p class="price">95</p></li>
+            <li class="description"><p>Pasta quattro formaggi</p><p>Паста пенне, сир пармезан, дорблю, моцарелла, гауда / Penne, parmesan, dorblu, mozzarella, qouda.</p></li>
+            <li class="list"><p class="food_name">Паста з морепродуктами</p><p class="heft">250</p><p class="price">135</p></li>
+            <li class="description"><p>Pasta with seafood</p><p>Паста тальятелле, мідіі, кальмари, лосось, креветки, томатний соус / Tagliatelle, mussels, squids, salmon, shrimps, tomata sauce.</p></li>
           </ul>
         </div>  
       </div>
